# portfolio-backend

./: .env.example  .env.prod.dokploy  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
app/: main.py
app/core/: config.py
app/docs/: md_file_structure.json
app/models/: schemas.py
app/routers/: embeddings.py  health.py
app/services/: embedding_service.py  markdown_processor.py
app/services/s3/: S3Client.py
scripts/: embeddings_maker.py  run_tests.sh  test_md_structure.py
src/services/: list_portfolio_files.py  regresar_files_test.py  simple_list_files.py
src/services/s3/: S3Client.py  __init__.py
test/: README.md  conftest.py  test_embedding_service.py  test_embedding_service_advanced.py  test_embedding_service_singleton.py  test_utils.py
vectorstores/: portfolio_hashes.json
vectorstores/portfolio_index/: index.faiss  index.pkl
