[project]
name = "portfolios-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.26",
    "langchain-core==0.3.66",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.4.1",
    "numpy==2.3.1",
    "orjson==3.10.18",
    "packaging==24.2",
    "pandas==2.3.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.0.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    
    "sqlalchemy==2.0.41",
    "tenacity==9.1.2",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "zstandard==0.23.0",
]

[project.scripts]
download-md = "src.services.regresar_files_test:main"
list-portfolio = "src.services.regresar_files_test:list_all_files"
search-md = "src.services.regresar_files_test:search_files"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
